mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: lxc
  labels:
    app: django
spec:
  selector: 
    app: db
  ports: 
    - port: 3306 
      targetPort: dbport 

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: lxc
  labels:
    app: db
spec:
  replicas: 1
  template:
    metadata:
      name: db
      labels:
        app: db
    spec:
      containers:
        - name: mysql 
          image: liaoxcool/tiger_mysql:5.7 
          args:
            - --character-set-server=utf8
            - --collation-server=utf8_unicode_ci
          ports:
            - containerPort: 3306
              name: dbport
          volumeMounts: 
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
          imagePullPolicy: IfNotPresent
      volumes: 
        - name: mysql-persistent-storage
          persistentVolumeClaim: 
            claimName: pvc-db
      restartPolicy: Always
  selector:
    matchLabels:
      app: db
