ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-tiger
  namespace: lxc
spec:
  rules:
  - http:
      paths:
      - path:
        backend:
          serviceName: app
          servicePort: 80
